fix: wrap text

--- a/src/css/components/_news-list.scss
+++ b/src/css/components/_news-list.scss
@@ -54,7 +54,7 @@
       text-overflow: ellipsis;
       width: 300px;
       display: -webkit-box;
-      -webkit-line-clamp: 8;
+      -webkit-line-clamp: 6;
       -webkit-box-orient: vertical;
     }
   }
